--- a/package.json
+++ b/package.json
@@ -17,9 +17,13 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@element-plus/icons-vue": "^2.3.1",
         "@inertiajs/vue3": "^1.2.0",
         "colorthief": "^2.6.0",
+        "element-plus": "^2.8.6",
+        "perfect-scrollbar": "^1.5.5",
         "vue": "^3.5.11",
-        "vue-router": "^4.4.5"
+        "vue-router": "^4.4.5",
+        "vuex": "^4.1.0"
     }
 }
