--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "devDependencies": {
         "@vitejs/plugin-vue": "^5.1.4",
         "autoprefixer": "^10.4.20",
-        "axios": "^1.7.4",
+        "axios": "^1.7.7",
         "laravel-mix": "^6.0.49",
         "laravel-vite-plugin": "^1.0",
         "postcss": "^8.4.47",
@@ -17,8 +17,12 @@
         "vite": "^5.0"
     },
     "dependencies": {
+        "@inertiajs/inertia": "^0.11.1",
+        "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.2.0",
         "colorthief": "^2.6.0",
+        "jquery": "^3.7.1",
+        "trumbowyg": "^2.28.0",
         "vue": "^3.5.11",
         "vue-router": "^4.4.5"
     }
