--- a/package.json
+++ b/package.json
@@ -14,10 +14,14 @@
         "postcss": "^8.4.47",
         "sass": "^1.79.5",
         "tailwindcss": "^3.4.13",
-        "vite": "^5.0"
+        "vite": "^5.0",
+        "vue-loader": "^17.4.2",
+        "vue-template-compiler": "^2.7.16",
+        "webpack": "^5.95.0"
     },
     "dependencies": {
         "@element-plus/icons-vue": "^2.3.1",
+        "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/vue3": "^1.2.0",
         "colorthief": "^2.6.0",
         "element-plus": "^2.8.6",
