--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,11 @@
     "require": {
         "php": "^8.2",
         "inertiajs/inertia-laravel": "^1.3",
+        "laravel/fortify": "^1.24",
         "laravel/framework": "^11.9",
         "laravel/sanctum": "^4.0",
         "laravel/tinker": "^2.9",
+        "spatie/laravel-permission": "^6.10",
         "tightenco/ziggy": "^2.3"
     },
     "require-dev": {
