--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@inertiajs/inertia": "^0.11.1",
         "@inertiajs/inertia-vue3": "^0.6.0",
         "@inertiajs/vue3": "^1.2.0",
+        "@vueuse/core": "^11.2.0",
         "colorthief": "^2.6.0",
         "cropperjs": "^1.6.2",
         "element-plus": "^2.8.6",
@@ -35,6 +36,7 @@
         "trumbowyg": "^2.28.0",
         "vue": "^3.5.11",
         "vue-router": "^4.4.5",
+        "vue3-quill": "^0.3.1",
         "vuex": "^4.1.0"
     }
 }
